--- a/react-hooks/package.json
+++ b/react-hooks/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "axios": "^0.21.0",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-scripts": "^4.0.1"
