--- a/type-chain/package.json
+++ b/type-chain/package.json
@@ -7,6 +7,7 @@
   "author": "AJu<zoz0312@naver.com>",
   "license": "MIT",
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
