--- a/vuejs/package.json
+++ b/vuejs/package.json
@@ -11,15 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-runtime": "7.13.15",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@vue/compiler-sfc": "^3.2.20",
+    "autoprefixer": "10.2.5",
     "babel-loader": "^8.2.3",
     "babel-preset-es2020": "^1.0.2",
-    "vue-loader": "^16.8.2",
-    "vue-style-loader": "^4.1.3",
-    "@babel/plugin-transform-runtime": "7.13.15",
-    "autoprefixer": "10.2.5",
     "copy-webpack-plugin": "8.1.1",
     "css-loader": "5.2.4",
     "html-webpack-plugin": "5.3.1",
@@ -28,12 +26,19 @@
     "sass": "1.32.11",
     "sass-loader": "11.0.1",
     "style-loader": "2.0.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "vue-loader": "^16.8.2",
+    "vue-style-loader": "^4.1.3",
     "webpack": "5.36.0",
     "webpack-cli": "4.6.0",
-    "webpack-dev-server": "4.0.0-beta.2"
+    "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
+    "@types/clone-deep": "^4.0.1",
+    "clone-deep": "^4.0.1",
     "eslint-loader": "^4.0.2",
-    "vue": "^3.2.20"
+    "vue": "^3.2.20",
+    "vuex": "^4.0.2"
   }
 }
