--- a/vuejs/tsconfig.json
+++ b/vuejs/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@utils/*": ["src/utils/*"]
+    },
     "outDir": "./dist/",
     "target": "esnext",
     "module": "esnext",
     // this enables stricter inference for data properties on `this`
     "jsx": "preserve",
-    "moduleResolution": "node",
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Projects */
@@ -30,9 +33,7 @@
 
     /* Modules */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
-    // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-    // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-    // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
