fix file directory structure

--- a/vuejs/config/tsconfig.path.json
+++ b/vuejs/config/tsconfig.path.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "..",
     "paths": {
       "@utils/*": ["src/utils/*"],
       "@store/*": ["src/store/*"]
