--- a/react-mpa/config/tsconfig.path.json
+++ b/react-mpa/config/tsconfig.path.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": "..",
     "paths": {
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],
+      "@store/*": ["src/store/*"]
     }
   }
 }
