--- a/react-mpa/package.json
+++ b/react-mpa/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "recoil": "^0.5.0"
   }
 }
