pc, mobile, global channel condition add

--- a/react-mpa/config/tsconfig.path.json
+++ b/react-mpa/config/tsconfig.path.json
@@ -3,7 +3,8 @@
     "baseUrl": "..",
     "paths": {
       "@utils/*": ["src/utils/*"],
-      "@store/*": ["src/store/*"]
+      "@store/*": ["src/store/*"],
+      "@dto/*": ["src/dto/*"]
     }
   }
 }
