react i18next add

--- a/react-mpa/config/tsconfig.path.json
+++ b/react-mpa/config/tsconfig.path.json
@@ -4,7 +4,8 @@
     "paths": {
       "@utils/*": ["src/utils/*"],
       "@store/*": ["src/store/*"],
-      "@dto/*": ["src/dto/*"]
+      "@dto/*": ["src/dto/*"],
+      "@i18n/*": ["src/i18n/*"]
     }
   }
 }
