--- a/react-mpa/package.json
+++ b/react-mpa/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "keywords": [
     "aju"
@@ -36,10 +37,14 @@
   "author": "zoz0312 (AJu)",
   "license": "ISC",
   "dependencies": {
+    "@types/i18next": "^13.0.0",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "@types/react-i18next": "^8.1.0",
+    "i18next": "^21.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.13.0",
     "recoil": "^0.5.0"
   }
 }
